--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,7 +79,6 @@
 
 .login-box-submit-button {
   display: inline-block;
-  vertical-align: middle;
   margin: 0 0 1rem 0;
   padding: 0.85em 1em;
   -webkit-appearance: none;
@@ -121,7 +120,6 @@
 
 .login-box-social-button-facebook {
   display: inline-block;
-  vertical-align: middle;
   margin: 0 0 1rem 0;
   padding: 0.85em 1em;
   -webkit-appearance: none;
@@ -154,7 +152,6 @@
 
 .login-box-social-button-twitter {
   display: inline-block;
-  vertical-align: middle;
   margin: 0 0 1rem 0;
   padding: 0.85em 1em;
   -webkit-appearance: none;
@@ -187,7 +184,6 @@
 
 .login-box-social-button-google {
   display: inline-block;
-  vertical-align: middle;
   margin: 0 0 1rem 0;
   padding: 0.85em 1em;
   -webkit-appearance: none;
@@ -238,7 +234,7 @@
   display: grid;
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
-  -ms-grid-columns: (1fr)[5];
+  -ms-grid-columns: (1fr)(5);
       grid-template-columns: repeat(5, 1fr);
   grid-template-areas: "big-top big-top big-top small-top small-top" "small-middle small-middle big-middle big-middle big-middle" "big-bottom big-bottom big-bottom big-bottom big-bottom";
 }
@@ -261,7 +257,7 @@
   grid-area: big-top;
   text-align: center;
   color: #Ab0d17;
-  fo
+
 }
 
 #b2 {
