changed colors on playpage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -315,8 +315,8 @@
 .holy-grail-footer {
   padding: 1rem;
   border: 1px solid #070707;
-  background-color: #070707;
-  color: #726e97;
+  background-color: #726e97;
+  color: #aaabbc;
 }
 
 .holy-grail-header {
