added views folder and layout folder with handlebar files moved html pages

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="stylesheets/style.css"/>
     
 
-    <title>Document</title>
+    <title>Log In</title>
   </head>
   <body>
     <div class="top-bar">
