--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="stylesheets/style.css" />
     
 
-    <title>Document</title>
+    <title>sign up</title>
   </head>
   <body>
     <div class="top-bar">
