--- a/public/views/main.html
+++ b/public/views/main.html
@@ -21,7 +21,7 @@
   integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE=" crossorigin="anonymous" />
   <link rel="stylesheet" href="stylesheets/style.css" />
 
-  <title>Document</title>
+  <title>Main Page</title>
 </head>
 
 <body>
@@ -40,12 +40,12 @@
   </div>
 
   <div class="header-grid">
-    <div id="b1" class="block">Ambient Medative</div>
-    <div id="b2" class="block">High Energy Focus</div>
-    <div id="b3" class="block">High Intensity Workout</div>
-    <div id="b4" class="block">Coding time</div>
+    <div id="b1" class="block"> <a href="playpage.html"> Ambient Meditative </a> </div>
+    <div id="b2" class="block"> <a href="playpage.html"> High Energy Focus  </a> </div>
+    <div id="b3" class="block"> <a href="playpage.html"> High Intensity Workout  </a> </div>
+    <div id="b4" class="block"> <a href="playpage.html"> Coding time        </a>      </div>
     <div class="bottom-block">
-      <div id="b5" class="block">Party it Up!</div>
+      <div id="b5" class="block"><a href="playpage.html"> Party it Up!</a></div>
       <div id="b6" class="block">Slow Jams</div>
       <div id="b7" class="block">Make Your Own</div>
     </div>
