--- a/public/views/playpage.html
+++ b/public/views/playpage.html
@@ -35,7 +35,7 @@
     />
     <link rel="stylesheet" href="stylesheets/style.css" />
 
-    <title>Document</title>
+    <title>Playpage</title>
   </head>
   <body>
     <div class="top-bar">
