fixed filepaths to css and started transfering html to handlebars

--- a/views/playpage.html
+++ b/views/playpage.html
@@ -33,7 +33,7 @@
       integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="stylesheets/style.css" />
+    <link rel="stylesheet" href="../public/stylesheets/style.css" />
 
     <title>Playpage</title>
   </head>
