--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,5 @@
-    {{topbar}}
+<link rel="stylesheet" href="/public/stylesheets/style.css/"> 
+    {{> topbar }}
     <div class="login-box">
       <div class="row collapse expanded">
         <div class="small-12 medium-6 column small-order-2 medium-order-1">
