--- a/views/playpage.html
+++ b/views/playpage.html
@@ -33,7 +33,7 @@
       integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../public/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
 
     <title>Playpage</title>
   </head>
@@ -98,7 +98,7 @@
               </div>
             </div>
             <div class="rating-block">
-              <p class="ratings-type">Songs in hte Playlist</p>
+              <p class="ratings-type">Songs in the Playlist</p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
@@ -158,7 +158,7 @@
               </div>
             </div>
             <div class="rating-block">
-              <p class="ratings-type">How the Plalist made you feel</p>
+              <p class="ratings-type">How the Playlist made you feel</p>
               <div class="rating-block-rating" data-rating>
                 <div class="star">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
