--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
       integrity="sha256-F+9Ns8Z/1ZISonBbojH743hsmF3x3AlQdJEeD8DhQsE="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../public/stylesheets/style.css"/>
+    <link rel="stylesheet" href="./stylesheets/style.css"/>
   
 </head>
 <body>
@@ -42,6 +42,11 @@
 
   <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js" integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
 
+  <script src="js/login.js" type="text/javascript"></script>
+  <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/members.js" type="text/javascript"></script>
+  <script src="js/newmood.js" type="text/javascript"></script>
+  <script src="js/playpage.js" type="text/javascript"></script>
   <script src="js/signup.js" type="text/javascript"></script>
 
 </body>
