--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
       <div class="row collapse expanded">
         <div class="small-12 medium-6 column small-order-2 medium-order-1">
           <form class="login-box-form-section">
-            <h1 class="login-box-title">log In</h1>
+            <h1 class="login-box-title">Log In</h1>
             <input
               class="login-box-input"
               type="text"
