--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,1 +1,32 @@
- {{> topbar }}
+{{> topbar }}
+<div class="row expanded collapse">
+    <div class="column">
+        <div class="large-article-header">
+            <div class="large-article-header-content">
+                <div class="center-container">
+                    <div class="article-title">
+                        <h1>Welcome <span class="member-name"></span></h1>
+                    </div>
+                    <div class="article-details">
+                        <div class="article-author">
+                            <img src="https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                alt="" />
+                            <div class="callout">
+                                <h4><strong>At send moods</strong></h4>
+                                <p>our goal is to help you get into the right mind set to keep you going no matter what it is</p>
+                                <button data-toggle="read-more" href="#">SHOW MORE <i class="fa fa-plus"></i></button>
+                                <div class="read-more" id="read-more" data-toggler
+                                    data-animate="hinge-in-from-top spin-out">
+                                    <h5>And if you cant find what you like make your own mood and start jamming!</h5>
+
+                                    <button data-toggle="read-more" href="main">go to moods <i
+                                            class="fa fa-plus"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
