--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -7,7 +7,7 @@
                  {{#if isAuthenticated}}
                     <li><a href="/">Log Out</a></li>
                    {{else}}      
-                    <li><a href="login">Log In</a></li>
+                    <li><a href="/signup">Sign Up</a></li>
                     {{/if}}
                 </ul>
             </li>
