--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,29 +1,29 @@
     {{> topbar }}
-    <div class="login-box">
+    <div class="signup-box">
       <div class="row collapse expanded">
         <div class="small-12 medium-6 column small-order-2 medium-order-1">
-          <form class="login-box-form-section">
-            <h1 class="login-box-title">Sign up</h1>
+          <form class="signup-box-form-section">
+            <h1 class="signup-box-title">Sign up</h1>
             <input
-              class="login-box-input"
+              class="signup-box-input"
               type="email"
               name="email"
               placeholder="email"
             />
             <input
-              class="login-box-input"
+              class="signup-box-input"
               type="password"
               name="password"
               placeholder="Password"
             />
             <input
-              class="login-box-input"
+              class="signup-box-input"
               type="password"
               name="password2"
               placeholder="Retype password"
             />
             <input
-              class="login-box-submit-button"
+              class="signup-box-submit-button"
               type="submit"
               name="signup_submit"
               value="Sign me up"
@@ -33,15 +33,15 @@
         </div>
         <div class="or">OR</div>
         <div
-          class="small-12 medium-6 column small-order-1 medium-order-2 login-box-social-section"
+          class="small-12 medium-6 column small-order-1 medium-order-2 signup-box-social-section"
         >
-          <div class="login-box-social-section-inner">
-            <span class="login-box-social-headline"
+          <div class="signup-box-social-section-inner">
+            <span class="signup-box-social-headline"
               >Sign up with<br />your social network</span
             >
-            <a class="login-box-social-button-facebook">Sign up with facebook</a>
-            <a class="login-box-social-button-twitter">Sign up with Twitter</a>
-            <a class="login-box-social-button-google">Sign up with Google+</a>
+            <a class="signup-box-social-button-facebook">Sign up with facebook</a>
+            <a class="signup-box-social-button-twitter">Sign up with Twitter</a>
+            <a class="signup-box-social-button-google">Sign up with Google+</a>
           </div>
         </div>
       </div>
