--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,48 +1,25 @@
-    {{> topbar }}
-    <div class="signup-box">
-      <div class="row collapse expanded">
-        <div class="small-12 medium-6 column small-order-2 medium-order-1">
-          <form class="signup-box-form-section">
-            <h1 class="signup-box-title">Sign up</h1>
-            <input
-              class="signup-box-input"
-              type="email"
-              name="email"
-              placeholder="email"
-            />
-            <input
-              class="signup-box-input"
-              type="password"
-              name="password"
-              placeholder="Password"
-            />
-            <input
-              class="signup-box-input"
-              type="password"
-              name="password2"
-              placeholder="Retype password"
-            />
-            <input
-              class="signup-box-submit-button"
-              type="submit"
-              name="signup_submit"
-              value="Sign me up"
-            />
-            
-          </form>
-        </div>
-        <div class="or">OR</div>
-        <div
-          class="small-12 medium-6 column small-order-1 medium-order-2 signup-box-social-section"
-        >
-          <div class="signup-box-social-section-inner">
-            <span class="signup-box-social-headline"
-              >Sign up with<br />your social network</span
-            >
-            <a class="signup-box-social-button-facebook">Sign up with facebook</a>
-            <a class="signup-box-social-button-twitter">Sign up with Twitter</a>
-            <a class="signup-box-social-button-google">Sign up with Google+</a>
-          </div>
-        </div>
+{{> topbar }}
+<div class="signup-box">
+  <div class="row collapse expanded">
+    <div class="small-12 medium-6 column small-order-2 medium-order-1">
+      <form class="signup-box-form-section">
+        <h1 class="signup-box-title">Sign up</h1>
+        <input class="signup-box-input" type="email" name="email" placeholder="email" />
+        <input class="signup-box-input" type="password" name="password" placeholder="Password" />
+
+
+        <input class="signup-box-submit-button" type="submit" name="signup_submit" value="Sign me up" />
+
+      </form>
+    </div>
+    <div class="or">OR</div>
+    <div class="small-12 medium-6 column small-order-1 medium-order-2 signup-box-social-section">
+      <div class="signup-box-social-section-inner">
+        <span class="signup-box-social-headline">Sign up with<br />your social network</span>
+        <a class="signup-box-social-button-facebook">Sign up with facebook</a>
+        <a class="signup-box-social-button-twitter">Sign up with Twitter</a>
+        <a class="signup-box-social-button-google">Sign up with Google+</a>
       </div>
     </div>
+  </div>
+</div>
