added logo image to topbar

--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -1,7 +1,9 @@
 <div class="top-bar">
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-            <li class="menu-text">Send Moods</li>
+            <a href="/"><img src="https://i.ibb.co/sbkG8h7/logoimage.jpg" alt="logoimage" border="0"/></a>
+
+
             <li>
                 <ul class="menu">
                     {{#if isAuthenticated}}
