--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,33 @@
 
 .top-bar{
   color: #4c5b61;
-  
+  padding-left: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
 }
 
 .learn-button{
   color: #89abbe;
+}
+
+img {
+  
+    height:75px;
+}
+
+.menu a{
+  padding-left: 0px;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+}
+
+
+
+li{
+  margin-top: 20px;
+  margin-left: 5px;
 }
 
 
