--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,16 +20,16 @@
   color: #89abbe;
 }
 
-img {
+ .nav {
+  height:75px;
   
-    height:75px;
 }
 
 .menu a{
   padding-left: 0px;
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-bottom: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-bottom: 0px;
 }
 
 
