completed the playlist.handlebars page and deleted the extra add text in members page

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -9,7 +9,7 @@
     <div class="columns medium-5">
         <h3 class="work-feature-block-header">Welcome <span class="member-name"></span></h3>
         <hr>
-        <p>Check out our Playlist and add even add your own!</p>
+        <p>Check out our Playlist and even add your own!</p>
         <a href="#" class="learn-button">Learn More</a>
     </div>
 </div>
