updated global user

--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -1,76 +1,112 @@
-{{>body}}
+{{> topbar}}
 
-{{!-- <div class="card">
-    <div row <div class="header-grid">
-        <div id="b1" class="block"> <a href="playpage.html"> Ambient Meditative </a> </div>
-        <div id="b2" class="block"> <a href="playpage.html"> High Energy Focus </a> </div>
-        <div id="b3" class="block"> <a href="playpage.html"> High Intensity Workout </a> </div>
-        <div id="b4" class="block"> <a href="playpage.html"> Coding time </a> </div>
-        <div class="bottom-block">
-            <div id="b5" class="block"><a href="playpage.html"> Party it Up!</a></div>
-            <div id="b6" class="block">Slow Jams</div>
-            <div id="b7" class="block">Make Your Own</div>
-        </div>
-    </div>
-</div> --}}
-
-{
-firstName: "Kate",
-lastName: "Wade",
-}
 
 <div class="grid-container">
     <div class="row">
         <div class="col-1">
             <div class="card-1">
                 <div class="card-title">
-                    <h1>Card Title</h1>
-                    <h1>{{firstName}}</h1>
+                    <img class="cardImg"
+                        src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80"
+                        alt="Ambiet Acitive">
+                    <h1>Ambient Active</h1>
                     <div class="card-name">
-                        <h4>Card Name</h4>
-                        <h4>{{lastName}}</h4>
+                        <h4>Move to these moods</h4>
                     </div>
-
+                    <button type="submit" id="card-1playButton">Play</button>
                 </div>
-
             </div>
-
         </div>
+
+
         <div class="col-2">
             <div class="card-2">
                 <div class="card-title">
+                    <img class="cardImg"
+                        src="https://images.unsplash.com/photo-1564865878688-9a244444042a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80"
+                        alt="Code">
+                    <h1>Code Concentrate</h1>
                     <div class="card-name">
-
+                        <h4>Core coding</h4>
                     </div>
-
+                    <button type="submit" id="card-2playButton">Play</button>
                 </div>
-
             </div>
-
         </div>
+
         <div class="col-3">
             <div class="card-3">
                 <div class="card-title">
+                    <img class="cardImg" src="URL from Unsplash- set not API" alt="Img 3">
+                    <h1>3</h1>
                     <div class="card-name">
-
+                        <h4>3</h4>
                     </div>
-
+                    <button type="submit" id="card-3playButton">Play</button>
                 </div>
-
             </div>
-
         </div>
+
+
         <div class="col-4">
             <div class="card-4">
                 <div class="card-title">
+                    <img class="cardImg" src="URL from Unsplash- set not API" alt="Img 4">
+                    <h1>4</h1>
                     <div class="card-name">
-
+                        <h4>4 info</h4>
                     </div>
-
+                    <button type="submit" id="card-4playButton">Play</button>
                 </div>
-
             </div>
-
+        </div>
+        <div class="col-5">
+            <div class="card-5">
+                <div class="card-title">
+                    <img class="cardImg" src="URL from Unsplash- set not API" alt="Img 5">
+                    <h1>5</h1>
+                    <div class="card-name">
+                        <h4>555</h4>
+                    </div>
+                    <button type="submit" id="card-5playButton">Play</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="card-6">
+                <div class="card-title">
+                    <img class="cardImg" src="URL from Unsplash- set not API" alt="Img 6">
+                    <h1>6</h1>
+                    <div class="card-name">
+                        <h4>6</h4>
+                    </div>
+                    <button type="submit" id="card-6playButton">Play</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-7">
+            <div class="card-7">
+                <div class="card-title">
+                    <img class="cardImg" src="URL from Unsplash- set not API" alt="Img 7">
+                    <h1>7</h1>
+                    <div class="card-name">
+                        <h4>7</h4>
+                    </div>
+                    <button type="submit" id="card-7playButton">Play</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="card-8">
+                <div class="card-title">
+                    <img class="cardImg" src="URL from Unsplash- set not API" alt="Img 8">
+                    <h1>3</h1>
+                    <div class="card-name">
+                        <h4>8</h4>
+                    </div>
+                    <button type="submit" id="card-8playButton">Play</button>
+                </div>
+            </div>
         </div>
 
 
