--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -10,6 +10,6 @@
         <h3 class="work-feature-block-header">Welcome <span class="member-name"></span></h3>
         <hr>
         <p>Check out our Playlist and even add your own!</p>
-        <a href="#" class="learn-button">Learn More</a>
+        <a href="/playbox" class="learn-button">Learn More</a>
     </div>
 </div>
