--- a/views/playpage.handlebars
+++ b/views/playpage.handlebars
@@ -1,253 +1,12 @@
-{{> topbar }}
-<div class="holy-grail-grid text-center">
-    <div class="holy-grail-header">
-        <h3>{{PlaylistMood}}</h3>
-    </div>
-
-    <div class="holy-grail-left">
-        <h3>{{PlaylistTitle}}</h3>
-        <ul>
-            <li><a href="#">{{PlaylistTitle}}</a></li>
-            <li><a href="#">{{PlaylistTitle}}</a></li>
-            <li><a href="#">{{PlaylistTitle}}</a></li>
-            <li><a href="#">{{PlaylistTitle}}</a></li>
-        </ul>
-        <hr>
-        <div class="card rating">
-            <div class="card-section">
-                <p class="ratings-card-header">Rate the playlist</p>
-                <div class="rating-block">
-                    <p class="ratings-type"></p>
-                    <div class="rating-block-rating" data-rating>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="rating-block">
-                    <p class="ratings-type">Songs in the Playlist</p>
-                    <div class="rating-block-rating" data-rating>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="rating-block">
-                    <p class="ratings-type">Visuals</p>
-                    <div class="rating-block-rating" data-rating>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="rating-block">
-                    <p class="ratings-type">How the Playlist made you feel</p>
-                    <div class="rating-block-rating" data-rating>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-                <div class="rating-block">
-                    <p class="ratings-type">Help with focus/production</p>
-                    <div class="rating-block-rating" data-rating>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                        <div class="star">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="37" viewBox="0 0 40 37">
-                                <polygon fill="none"
-                                    points="272 30 260.244 36.18 262.489 23.09 252.979 13.82 266.122 11.91 272 0 277.878 11.91 291.021 13.82 281.511 23.09 283.756 36.18"
-                                    transform="translate(-252)" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="holy-grail-middle">
-        <h3>VIDEO</h3>
-        <div class="responsive-embed">
-            {{PlaylistTitle}}
-            <iframe width="420" height="315" src={{PlaylistURL}} frameborder="0" allowfullscreen></iframe>
-        </div>
-    </div>
-
-    <div class="holy-grail-right">
-        <!-- comments -->
-        <div class="comment-section-container">
-
-        </div>
-        <!--/comments-->
-
-        <!-- comment form -->
-        <form class="comment-section-form">
-
-        </form>
-        <!--/comment box-->
-    </div>
-
-    <div class="holy-grail-footer">
-        <div>unsplash container</div>
-    </div>
-
-
-
-
+<div>
+    {{User.email}}
+    {{createdAt}}
+</div>
+<div>
+    <h1>{{title}}</h1>
+    <p>{{description}}</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{youtubeVideoId}}" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <img data-mood={{mood}} src="/api/unsplash/{{mood}}" alt="placeholder">
 
 </div>
