--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -10,3 +10,10 @@
     </a>
     {{/each}}
 </div>
+
+
+<div class="header-grid">
+    <a href="/playlist1">
+        <div class="block1">Ambient Med</div>
+    </a>
+</div>
