--- a/views/playpage1.handlebars
+++ b/views/playpage1.handlebars
@@ -3,8 +3,8 @@
     {{createdAt}}
 </div>
 <div>
-    <h1>{{title}}</h1>
-    <p>{{description}}</p>
+    <h1>Ambient Moods</h1>
+    <p>User description</p>
     <iframe width="560" height="315" src="UPDATE YT URL" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <img data-mood={{mood}} src="UNSPLASH URL" alt="placeholder">
