--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -1,8 +1,8 @@
 <div class="top-bar">
     <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-            <a href="/"><img class="nav" src="https://i.ibb.co/sbkG8h7/logoimage.jpg" alt="logoimage" border="0"/></a>
-
+            <a href="/"><img class="nav" id="logoImg" src="https://i.ibb.co/sbkG8h7/logoimage.jpg" alt="logoimage"
+                    border="0" /></a>
 
             <li>
                 <ul class="menu">
