updates to main-playbox and main.js

--- a/views/main-playbox.handlebars
+++ b/views/main-playbox.handlebars
@@ -1,6 +1,21 @@
 {{> topbar}}
 
-<div class="header-grid">
+<div class="work-feature-block row" id="danny">
+    <div class="columns medium-7">
+        <img class="work-feature-block-image"
+            src="https://images.unsplash.com/photo-1508700115892-45ecd05ae2ad?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+            alt="" />
+    </div>
+    <div class="columns medium-5">
+        <h3 class="work-feature-block-header">Welcome <span class="member-name"></span></h3>
+        <hr>
+        <p>Check out our music moods, then add your own!</p>
+        <a href="#" class="button large learn-button" id="learn">Learn More</a>
+    </div>
+</div>
+
+
+<div class="header-grid" id="playBoxes">
     <a href="/create-playlist">
         <div class="block">Make Your Own</div>
     </a>
@@ -9,11 +24,29 @@
         <div class="block">{{title}}</div>
     </a>
     {{/each}}
-</div>
 
 
-<div class="header-grid">
     <a href="/playlist1">
         <div class="block1">Ambient Med</div>
     </a>
+
+    <a href="/playlist2/">
+        <div class="block">Ambient Med 2</div>
+    </a>
+    <a href="/playlist3/">
+        <div class="block">Ambient Med 3</div>
+    </a>
+    <a href="/playlist4/">
+        <div class="block">Ambient Med 4</div>
+    </a>
+    <a href="/playlist5/">
+        <div class="block">Ambient Med</div>
+    </a>
+    <a href="/playlist6/">
+        <div class="block">Ambient Med</div>
+    </a>
+    <a href="/playlist7/">
+        <div class="block">Ambient Med</div>
+    </a>
+
 </div>
